# rez-packages

./: .gitignore  README.md
Qt_py/: CMakeLists.txt  README.md  package.py  test.py
boost/1.70/: CMakeLists.txt  README.md  package.py
boost/1.70/cmake/: boost-build.bat.in  boost.cmake
boost/1.77/: CMakeLists.txt  README.md  package.py
cmake/3.17/: package.py  rezbuild.py
emacs/27/: build.ps1  package.py
ffmpeg/2022-02-03/: README.md  build.ps1  package.py
git/2.34.1/: package.py
houdini/18.5/: package.py
houdini/19/: package.py
maya/2020/: MayaNoColorManagement.xml  README.md  license.txt  package.py  rezbuild.ps1
maya/2020/Invoke-Maya/: Invoke-Maya.psm1
maya_devkit/2020/: README.md  build.ps1  package.py
msvc/14.16.27023/: CustomInstall.json  README.md  build.ps1  package.py
msvc/14.29.30133/: CustomInstall.json  README.md  build.ps1  build.rxt  package.py
nasm/2.15.05/: CMakeLists.txt  README.md  package.py
python/: .gitignore  package.py  rezbuild.ps1
ragdoll/2022/: CMakeLists.txt  Ragdoll-2022_01_21.mod  package.py
ragdoll/2022/Ragdoll-2022_01_21/: OSS-Licences.txt
ragdoll/2022/Ragdoll-2022_01_21/shared/mac/: libTurboActivate.dylib  libTurboFloat.dylib
tbb/2018/: CMakeLists.txt  README.md  package.py
tbb/2018/cmake/: tbb.cmake
tbb/2018/src/: .gitignore
tbb/2021.5.0/: CMakeLists.txt  README.md  package.py
usd/20.05/: CMakeLists.txt  package.py
vfxcmake/: CMakeLists.txt  README.md  package.py
vs/14.16.27023/: CustomInstall.json  README.md  build.ps1  package.py
vs/15/: CustomInstall.json  README.md  build.ps1  notes.md  package.py
